2007-07-17  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : map TreeModelFilter ctor param to prop to
	avoid subclass ctor exception. [Fixes #82115]

2007-07-17  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : make GError** signatures fatal to
	avoid compilation problem in gmime-sharp.

2007-07-12  Mike Kestner  <mkestner@novell.com>

	* generator/StructBase.cs : use typeof to pass type to PtrToStruct
	to avoid an instantiation and method call.  Duh.

2007-07-10  Mike Kestner  <mkestner@novell.com>

	* generator/ImportSignature.cs : use Parameter.NativeSignature 
	prop and refactor out some GError handling.
	* generator/MethodBody.cs : Refactor logic into Parameters.
	* generator/Parameters.cs : add ArrayParameter, ArrayCountPair, and
	ErrorParameter subclasses to refactor spaghetti code in MethodBody.

2007-07-03  Mike Kestner  <mkestner@novell.com>

	* bootstrap-generic : use automake --foreign to make automake-1.10
	happy with gnu make function usage.

2007-06-25  Mike Kestner  <mkestner@novell.com>

	* gtk/StatusIcon.custom : present_icon is in the glue lib.

2007-06-25  Ankit Jain  <jankit@novell.com>

	* gdk/Gdk.metadata : hide Property.Get for manual impl.
	* gdk/Property.custom : manually marshal the data param in Get.

2007-06-19  Mike Kestner  <mkestner@novell.com>

	* gdk/Property.custom : obsolete compat overload for Change().
	* gdk/Gdk.metadata : array attr for Property.Change ().
	* gdk/Makefile.am : add custom file.

2007-06-18  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.10 : bump version and tag.

2007-06-05  Mike Kestner  <mkestner@novell.com>

	* glib/ManagedValue.cs (ReleaseWrapper): new method.
	* glib/Value.cs : release the ManagedValue wrapper to avoid leaks.
	[Fixes #81799]

2007-05-03  Wade Berrier  <wberrier@novell.com>

	* generator/gapi2-codegen.in:
	* parser/gapi2-fixup.in:
	* parser/gapi2-parser.in:
	Don't use 'which' anymore, as it doesn't work in all caes (ie: when symlinks are
	in the way)
