@@ -1,3 +1,10 @@
+2007-07-18  Mike Kestner  <mkestner@novell.com>
+
+	* gdk/EventExpose.cs : return a pointer from the get_area glue
+	pinvoke to avoid VS crashes on win32.
+	* gdk/glue/event.c : return a GdkRectangle* to avoid stack imbalance
+	on VS debugger.  [Fixes #82098]
+
 2007-07-17  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Gtk.metadata : map TreeModelFilter ctor param to prop to
